# adventure_miner

./: CMakeLists.txt
src/: main.cpp
src/include/: color.h  config.hpp  game.hpp  io.hpp  utils.hpp
